changed mobile number

--- a/machine test/machine test/contact us page.html
+++ b/machine test/machine test/contact us page.html
@@ -13,7 +13,7 @@
         <label for="name">Name:</label><br>
         <input id="name" type="text" required placeholder="enter your name" ><br><br>
 
-        <label>Mobile Number:</label><br>
+        <label>Enter Mobile Number:</label><br>
         <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '')"
         
      inputmode="numeric" maxlength="10" placeholder="Enter your number" pattern="\d*" required> <br><br>
